--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "validate": "yarn lint && yarn flow"
   },
   "dependencies": {
+    "aphrodite": "^1.2.0",
     "lodash": "^4.17.2",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
@@ -28,16 +29,15 @@
     "babel-loader": "^6.2.8",
     "babel-plugin-react-relay": "^0.10.0",
     "babel-plugin-transform-class-properties": "^6.19.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-polyfill": "^6.16.0",
     "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "babel-relay-plugin": "0.10.0",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.26.0",
     "flow-bin": "^0.42.0",
     "snazzy": "^6.0.0",
     "standard": "^9.0.2",
-    "style-loader": "^0.13.1",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
   },
