--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.18.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-fontawesome": "^1.5.0",
     "react-relay": "^0.10.0",
     "react-router": "2.8.0",
     "react-router-relay": "^0.13.5"
