--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "author": "Ty Cobb",
   "license": "MIT",
   "scripts": {
-    "start": "./node_modules/.bin/webpack-dev-server -d --hot --inline",
-    "build": "./node_modules/.bin/webpack -p --optimize-occurrence-order --optimize-dedupe",
+    "start": "webpack-dev-server -d --hot --inline --env.env=development",
+    "build:staging": "webpack -p --env.env=staging",
+    "deploy:staging": "yarn build:staging && surge -p dist -- -d witness-slips.surge.sh",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "lint": "snazzy",
     "lint:fix": "snazzy --fix",
     "flow:restart": "flow stop && flow",
@@ -28,7 +31,7 @@
     "babel-cli": "^6.18.0",
     "babel-core": "^6.0.0",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.8",
+    "babel-loader": "^6.4.1",
     "babel-plugin-react-relay": "^0.10.0",
     "babel-plugin-transform-class-properties": "^6.19.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
@@ -36,14 +39,17 @@
     "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "babel-relay-plugin": "0.10.0",
-    "copy-webpack-plugin": "^4.0.1",
+    "clean-webpack-plugin": "^0.1.16",
     "eslint": ">=2.0.0",
     "eslint-plugin-flowtype": "^2.30.4",
     "flow-bin": "^0.42.0",
+    "html-webpack-plugin": "^2.28.0",
+    "jest": "^19.0.2",
     "snazzy": "^6.0.0",
     "standard": "^9.0.2",
-    "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.16.2"
+    "surge": "^0.19.0",
+    "webpack": "^2.3.2",
+    "webpack-dev-server": "^2.4.2"
   },
   "graphql": {
     "file": "./schema.json"
