--- a/package.json
+++ b/package.json
@@ -43,11 +43,14 @@
     "babel-preset-react": "^6.16.0",
     "babel-relay-plugin": "0.10.0",
     "clean-webpack-plugin": "^0.1.16",
+    "enzyme": "^2.8.0",
     "eslint": ">=2.0.0",
     "eslint-plugin-flowtype": "^2.30.4",
     "flow-bin": "^0.42.0",
     "html-webpack-plugin": "^2.28.0",
     "jest": "^19.0.2",
+    "jest-enzyme": "^3.0.0",
+    "react-addons-test-utils": "^15.4.2",
     "snazzy": "^6.0.0",
     "standard": "^9.0.2",
     "surge": "^0.19.0",
@@ -70,6 +73,7 @@
     ]
   },
   "jest": {
+    "setupTestFrameworkScriptFile": "./jest/setup_framework.js",
     "setupFiles": [
       "./jest/setup.js"
     ]
