--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy:staging": "yarn build:staging && surge -p dist -- -d witness-slips.surge.sh",
     "test": "jest",
     "test:watch": "jest --watch",
+    "test:debug": "node --inspect --debug-brk ./node_modules/.bin/jest --runInBand",
     "lint": "snazzy",
     "lint:fix": "snazzy --fix",
     "flow:restart": "flow stop && flow",
@@ -31,20 +32,25 @@
     "babel-cli": "^6.18.0",
     "babel-core": "^6.0.0",
     "babel-eslint": "^7.1.1",
+    "babel-jest": "^19.0.0",
     "babel-loader": "^6.4.1",
     "babel-plugin-react-relay": "^0.10.0",
     "babel-plugin-transform-class-properties": "^6.19.0",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-polyfill": "^6.16.0",
     "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "babel-relay-plugin": "0.10.0",
     "clean-webpack-plugin": "^0.1.16",
+    "enzyme": "^2.8.0",
     "eslint": ">=2.0.0",
     "eslint-plugin-flowtype": "^2.30.4",
     "flow-bin": "^0.42.0",
     "html-webpack-plugin": "^2.28.0",
     "jest": "^19.0.2",
+    "jest-enzyme": "^3.0.0",
+    "react-addons-test-utils": "^15.4.2",
     "snazzy": "^6.0.0",
     "standard": "^9.0.2",
     "surge": "^0.19.0",
@@ -53,6 +59,24 @@
   },
   "graphql": {
     "file": "./schema.json"
+  },
+  "babel": {
+    "presets": [
+      "latest",
+      "react"
+    ],
+    "plugins": [
+      "react-relay",
+      "transform-flow-strip-types",
+      "transform-class-properties",
+      "transform-object-rest-spread"
+    ]
+  },
+  "jest": {
+    "setupTestFrameworkScriptFile": "./test/setup_framework.js",
+    "setupFiles": [
+      "./test/setup.js"
+    ]
   },
   "standard": {
     "parser": "babel-eslint",
