--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-dom": "^15.4.1",
     "react-fontawesome": "^1.5.0",
     "react-relay": "^0.10.0",
-    "react-router": "2.8.0",
+    "react-router": "^2.8.0",
     "react-router-relay": "^0.13.5"
   },
   "devDependencies": {
