--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.2",
     "moment": "^2.18.1",
     "react": "^15.4.1",
+    "react-addons-css-transition-group": "^15.4.2",
     "react-dom": "^15.4.1",
     "react-fontawesome": "^1.5.0",
     "react-relay": "^0.10.0",
@@ -85,6 +86,9 @@
     ],
     "ignore": [
       "flow-typed"
+    ],
+    "globals": [
+      "React$Element"
     ]
   }
 }
