--- a/package.json
+++ b/package.json
@@ -88,7 +88,8 @@
       "flow-typed"
     ],
     "globals": [
-      "React$Element"
+      "React$Element",
+      "requestAnimationFrame"
     ]
   }
 }
