--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "webpack-dev-server -d --hot --inline --env.env=development",
     "build:staging": "webpack -p --env.env=staging",
-    "deploy:staging": "yarn build:staging && surge -p dist -- -d witness-slips.surge.sh",
+    "deploy:staging": "yarn build:staging && surge -p dist -- -d legislated-staging.surge.sh",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:debug": "node --inspect --debug-brk ./node_modules/.bin/jest --runInBand",
