--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Ty Cobb",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server -d --hot --inline --history-api-fallback --env.env=development",
+    "start": "webpack-dev-server --debug --hot --inline --env.env=development",
     "build:staging": "webpack -p --env.env=staging",
     "deploy:staging": "yarn build:staging && surge -p dist -- -d legislated-staging.surge.sh",
     "test": "jest",
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "aphrodite": "^1.2.0",
+    "color": "^1.0.3",
     "lodash": "^4.17.2",
     "moment": "^2.18.1",
     "react": "^15.4.1",
@@ -27,7 +28,8 @@
     "react-fontawesome": "^1.5.0",
     "react-relay": "^0.10.0",
     "react-router": "^2.8.0",
-    "react-router-relay": "^0.13.5"
+    "react-router-relay": "^0.13.5",
+    "react-sticky": "^5.0.8"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
@@ -77,7 +79,10 @@
     "setupTestFrameworkScriptFile": "./test/setup_framework.js",
     "setupFiles": [
       "./test/setup.js"
-    ]
+    ],
+    "moduleNameMapper": {
+      "^shared/(.*)$": "<rootDir>/src/shared/$1"
+    }
   },
   "standard": {
     "parser": "babel-eslint",
