--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
   "license": "MIT",
   "scripts": {
     "start": "webpack-dev-server --debug --hot --inline --env.env=development",
-    "build:staging": "webpack -p --env.env=staging",
-    "deploy:staging": "yarn build:staging && surge -p dist -- -d legislated-staging.surge.sh",
+    "build:stage": "webpack -p --env.env=staging",
+    "build:prod": "webpack -p --env.env=production",
+    "deploy:stage": "yarn build:stage && yarn deploy:stage:sync",
+    "deploy:stage:sync": "aws s3 sync --acl public-read dist/ s3://staging.legislated.org --profile legislated-bucket-staging",
+    "deploy:prod": "yarn build:prod && yarn deploy:prod:sync",
+    "deploy:prod:sync": "aws s3 sync --acl public-read dist/ s3://legislated.org --profile legislated-bucket-production",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:debug": "node --inspect --debug-brk ./node_modules/.bin/jest --runInBand",
