--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ branches:
   only:
     - master
     - production
+before_script:
+  - chmod u+x ./scripts/ci_build.sh
 script:
   - yarn lint
   - yarn flow
