--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Ty Cobb",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --debug --hot --inline --env.env=development",
+    "start": "webpack-dev-server --d --hot --inline --env.env=development",
     "build:stage": "webpack -p --env.env=staging",
     "build:prod": "webpack -p --env.env=production",
     "deploy:stage": "yarn build:stage && yarn deploy:stage:sync",
@@ -60,7 +60,6 @@
     "react-addons-test-utils": "^15.4.2",
     "snazzy": "^6.0.0",
     "standard": "^9.0.2",
-    "surge": "^0.19.0",
     "webpack": "^2.3.2",
     "webpack-dev-server": "^2.4.2"
   },
