--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ampersand-events": "^2.0.2",
     "aphrodite": "^1.2.0",
     "color": "^1.0.3",
+    "glamor": "^2.20.24",
     "lodash": "^4.17.2",
     "moment": "^2.18.1",
     "react": "^15.4.1",
