Sub Glamor for Aphrodite (#39)
* add glamor
* finish glamor port, remove aphrodite
* fix tests

--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   },
   "dependencies": {
     "ampersand-events": "^2.0.2",
-    "aphrodite": "^1.2.0",
     "color": "^1.0.3",
+    "glamor": "^2.20.24",
     "lodash": "^4.17.2",
     "moment": "^2.18.1",
     "react": "^15.4.1",
