--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-relay": "^0.10.0",
     "react-router": "^2.8.0",
     "react-router-relay": "^0.13.5",
+    "react-router-scroll": "^0.4.2",
     "react-sticky": "^5.0.8"
   },
   "devDependencies": {
