--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "moment": "^2.18.1",
     "react": "^15.4.1",
     "react-addons-css-transition-group": "^15.4.2",
+    "react-copy-to-clipboard": "^5.0.0",
     "react-dom": "^15.4.1",
     "react-fontawesome": "^1.5.0",
     "react-relay": "^0.10.0",
