--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "build:stage": "webpack -p --env.env=staging",
     "build:prod": "webpack -p --env.env=production",
     "deploy:stage": "yarn build:stage && yarn deploy:stage:sync",
-    "deploy:stage:sync": "aws s3 sync --acl public-read dist/ s3://staging.legislated.org --profile legislated-bucket-staging",
+    "deploy:stage:sync": "aws s3 sync --acl public-read dist/ s3://staging.legislated.org --profile legislated-bucket-staging --region us-east-2",
     "deploy:prod": "yarn build:prod && yarn deploy:prod:sync",
-    "deploy:prod:sync": "aws s3 sync --acl public-read dist/ s3://legislated.org --profile legislated-bucket-production",
+    "deploy:prod:sync": "aws s3 sync --acl public-read dist/ s3://legislated.org --profile legislated-bucket-production --region us-east-2",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:debug": "node --inspect --debug-brk ./node_modules/.bin/jest --runInBand",
