--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-addons-css-transition-group": "^15.4.2",
     "react-dom": "^15.4.1",
     "react-fontawesome": "^1.5.0",
+    "react-helmet": "^5.0.3",
     "react-relay": "^0.10.0",
     "react-router": "^2.8.0",
     "react-router-relay": "^0.13.5",
