--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "color": "^1.0.3",
+    "eventemitter3": "^2.0.3",
     "glamor": "^2.20.24",
     "js-base64": "^2.1.9",
     "lodash": "^4.17.2",
