--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   },
   "dependencies": {
     "color": "^1.0.3",
+    "eventemitter3": "^2.0.3",
     "glamor": "^2.20.24",
+    "js-base64": "^2.1.9",
     "lodash": "^4.17.2",
     "moment": "^2.18.1",
     "react": "^15.4.1",
