fix casing of everything

--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     ]
   },
   "jest": {
-    "setupTestFrameworkScriptFile": "./test/setup_framework.js",
+    "setupTestFrameworkScriptFile": "./test/setupFramework.js",
     "setupFiles": [
       "./test/setup.js"
     ],
