--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   },
   "dependencies": {
     "color": "^1.0.3",
+    "file-loader": "^0.11.1",
     "glamor": "^2.20.24",
+    "image-webpack-loader": "^3.3.1",
     "lodash": "^4.17.2",
     "moment": "^2.18.1",
     "react": "^15.4.1",
