--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lint": "snazzy",
     "lint:fix": "snazzy --fix",
     "flow:restart": "flow stop && flow",
-    "validate": "yarn lint && yarn flow && yarn test"
+    "validate": "yarn lint && yarn flow && yarn test",
+    "relay": "relay-compiler --src ./src --schema schema.json"
   },
   "dependencies": {
     "color": "^1.0.3",
@@ -34,10 +35,9 @@
     "react-dom": "^15.4.1",
     "react-fontawesome": "^1.5.0",
     "react-relay": "^1.1.0",
-    "react-router": "^2.8.0",
-    "react-router-relay": "^0.13.5",
-    "react-router-scroll": "^0.4.2",
-    "react-sticky": "^5.0.8"
+    "react-router-dom": "^4.1.1",
+    "react-sticky": "^5.0.8",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
@@ -46,13 +46,13 @@
     "babel-jest": "^19.0.0",
     "babel-loader": "^6.4.1",
     "babel-plugin-react-relay": "^0.10.0",
+    "babel-plugin-relay": "^1.1.0",
     "babel-plugin-transform-class-properties": "^6.19.0",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-polyfill": "^6.16.0",
     "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
-    "babel-relay-plugin": "0.10.0",
     "clean-webpack-plugin": "^0.1.16",
     "copy-webpack-plugin": "^4.0.1",
     "enzyme": "^2.8.0",
@@ -65,6 +65,7 @@
     "jest": "^19.0.2",
     "jest-enzyme": "^3.0.0",
     "react-addons-test-utils": "^15.4.2",
+    "relay-compiler": "^1.1.0",
     "snazzy": "^6.0.0",
     "standard": "^9.0.2",
     "webpack": "^2.3.2",
@@ -79,7 +80,13 @@
       "react"
     ],
     "plugins": [
-      "react-relay",
+      [
+        "relay",
+        {
+          "compat": true,
+          "schema": "schema.json"
+        }
+      ],
       "transform-flow-strip-types",
       "transform-class-properties",
       "transform-object-rest-spread"
@@ -104,6 +111,7 @@
     ],
     "globals": [
       "React$Element",
+      "fetch",
       "requestAnimationFrame"
     ]
   }
