fix admin routes / filtering

--- a/.flowconfig
+++ b/.flowconfig
@@ -17,6 +17,7 @@ suppress_type=$FlowFixMe
 suppress_type=$FixMe
 
 ; optional features
+esproposal.decorators=ignore
 unsafe.enable_getters_and_setters=true
 
 ; we'd like to do this, but it doesn't seem to work:
