--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-fontawesome": "^1.5.0",
     "react-relay": "^1.1.0",
     "react-router-dom": "^4.1.1",
+    "react-router-scroll": "ytase/react-router-scroll#build",
     "react-sticky": "^5.0.8",
     "whatwg-fetch": "^2.0.3"
   },
@@ -48,7 +49,6 @@
     "babel-loader": "^6.4.1",
     "babel-plugin-relay": "^1.1.0",
     "babel-plugin-transform-class-properties": "^6.19.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-polyfill": "^6.16.0",
@@ -81,11 +81,16 @@
       "react"
     ],
     "plugins": [
-      ["relay", { "compat": true, "schema": "schema.json" }],
+      [
+        "relay",
+        {
+          "compat": true,
+          "schema": "schema.json"
+        }
+      ],
       "transform-flow-strip-types",
       "transform-class-properties",
-      "transform-object-rest-spread",
-      "transform-decorators-legacy"
+      "transform-object-rest-spread"
     ]
   },
   "jest": {
