--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "eslint": ">=2.0.0",
     "eslint-plugin-flowtype": "^2.30.4",
     "file-loader": "^0.11.1",
-    "flow-bin": "^0.42.0",
+    "flow-bin": "^0.50.0",
     "html-webpack-plugin": "^2.28.0",
     "image-webpack-loader": "^3.3.1",
     "jest": "^19.0.2",
@@ -108,7 +108,7 @@
       "flowtype"
     ],
     "ignore": [
-      "flow-typed"
+      "flow-typed/"
     ],
     "globals": [
       "fetch",
