--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:debug": "node --inspect --debug-brk ./node_modules/.bin/jest --runInBand",
-    "lint": "snazzy",
-    "lint:fix": "snazzy --fix",
+    "lint": "standard | snazzy",
+    "lint:fix": "standard --fix | snazzy",
     "flow:restart": "flow stop && flow",
     "validate": "yarn lint && yarn flow && yarn test",
     "relay": "relay-compiler --src ./src --schema schema.json",
@@ -57,8 +57,8 @@
     "clean-webpack-plugin": "^0.1.16",
     "copy-webpack-plugin": "^4.0.1",
     "enzyme": "^2.8.0",
-    "eslint": ">=2.0.0",
-    "eslint-plugin-flowtype": "^2.30.4",
+    "eslint": "^4.2.0",
+    "eslint-plugin-flowtype": "^2.35.0",
     "file-loader": "^0.11.2",
     "flow-bin": "^0.50.0",
     "html-webpack-plugin": "^2.29.0",
@@ -67,8 +67,8 @@
     "jest-enzyme": "^3.0.0",
     "react-addons-test-utils": "^15.4.2",
     "relay-compiler": "^1.1.0",
-    "snazzy": "^6.0.0",
-    "standard": "^9.0.2",
+    "snazzy": "^7.0.0",
+    "standard": "^10.0.2",
     "webpack": "^3.3.0",
     "webpack-dev-server": "^2.5.1"
   },
