ignore plugin in flowconfig

--- a/.flowconfig
+++ b/.flowconfig
@@ -3,6 +3,7 @@
 .*/node_modules/graphql/.*
 .*/node_modules/jest-enzyme/.*
 .*/node_modules/enzyme-matchers/.*
+.*/node_modules/relay-compiler-webpack-plugin/.*
 
 [include]
 
