--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ branches:
 before_script:
   - chmod +x ./scripts/ci-build.sh
   - chmod +x ./scripts/ci-watchman.sh
-  - ./scrips/ci-watchman.sh
+  - ./scripts/ci-watchman.sh
 
 script:
   - yarn lint
