fill out navigation tests

--- a/package.json
+++ b/package.json
@@ -78,26 +78,11 @@
   },
   "babel": {
     "presets": [
-      [
-        "env",
-        {
-          "targets": {
-            "browsers": [
-              "last 2 versions"
-            ]
-          }
-        }
-      ],
+      [ "env", { "targets": { "browsers": [ "last 2 versions" ] } }],
       "react"
     ],
     "plugins": [
-      [
-        "relay",
-        {
-          "compat": true,
-          "schema": "schema.json"
-        }
-      ],
+      [ "relay", { "compat": true, "schema": "schema.json" } ],
       "transform-flow-strip-types",
       "transform-class-properties",
       "transform-object-rest-spread"
