--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "deploy:prod": "yarn build:prod && yarn deploy:prod:sync",
     "deploy:prod:sync": "aws s3 sync --acl public-read dist/ s3://legislated.org --profile legislated-bucket-production",
     "test": "jest",
+    "test:update": "jest --updateSnapshot",
     "test:watch": "jest --watch",
     "test:debug": "node --inspect --debug-brk ./node_modules/.bin/jest --runInBand",
     "lint": "standard | snazzy",
@@ -65,7 +66,7 @@
     "image-webpack-loader": "^3.3.1",
     "jest": "^20.0.4",
     "jest-enzyme": "^3.5.3",
-    "react-test-renderer": "^15.6.1",
+    "react-test-renderer": "^15.6.2",
     "relay-compiler": "^1.1.0",
     "relay-compiler-webpack-plugin": "danielholmes/relay-compiler-webpack-plugin#relay-compiler-1.1.0-compat",
     "snazzy": "^7.0.0",
@@ -78,11 +79,26 @@
   },
   "babel": {
     "presets": [
-      [ "env", { "targets": { "browsers": [ "last 2 versions" ] } }],
+      [
+        "env",
+        {
+          "targets": {
+            "browsers": [
+              "last 2 versions"
+            ]
+          }
+        }
+      ],
       "react"
     ],
     "plugins": [
-      [ "relay", { "compat": true, "schema": "schema.json" } ],
+      [
+        "relay",
+        {
+          "compat": true,
+          "schema": "schema.json"
+        }
+      ],
       "transform-flow-strip-types",
       "transform-class-properties",
       "transform-object-rest-spread"
